Filter returns & bugfixes

--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -75,7 +75,7 @@
 </div>
 
 <mat-card class="index-card index-card-sm" *ngIf="num_results > 0">
-	<h2 class="gd-secondary">Latest reports indexed by you</h2>
+	<h2 class="gd-secondary">Your recently indexed reports</h2>
 
 	<mat-card-content style="padding: 0 30px 15px;">
 
