--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -712,11 +712,11 @@
   background: url(../images/game/attack_type_2_sm.png) no-repeat -64px 0;
 }
 
-.attack_type32x32.attack_portal_attack_olympus {
+.attack_type32x32.portal_attack_olympus {
   background: url(../images/game/attack_type_2_sm.png) no-repeat -64px -32px;
 }
 
-.attack_type32x32.attack_portal_support_olympus {
+.attack_type32x32.portal_support_olympus {
   background: url(../images/game/attack_type_2_sm.png) no-repeat 0 -64px;
 }
 
