Update landing page & monitoring stats

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -25,24 +25,34 @@
       <br/>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
-          1. <strong>Indexing:</strong> Reports in your inbox and on your forum will receive an additional '<strong class="gd-primary">Index +</strong>' button.
-          When you click on this button, the report is uploaded to your personal GrepoData account.
+          1. <strong>Indexing reports:</strong> Reports in your inbox and on your forum will receive an additional '<strong class="gd-primary">Index +</strong>' button.
+          When you click on this button, the report is uploaded to your personal GrepoData account and is shared with all your teammates.
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-          <img class="lib-img" style="max-width: 100%; display: block; border: 1px solid #334254;" src="../../assets/images/index.png" alt="Grepolis index report">
+          <img class="lib-img img-scale" style="max-width: 100%; display: block; border: 1px solid #334254;" src="../../assets/images/index.png" alt="Grepolis index report">
         </div>
       </div>
       <br/>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
-          2. <strong>Browsing:</strong> The extracted enemy intelligence from the report is linked to your personal GrepoData account.
+          2. <strong>Sharing commands:</strong> Your in-game command overview will receive a new '<strong class="gd-primary">Share with team</strong>' button.
+          When you click on this button, your commands are uploaded to a real-time shared command overview for you and your teammates.
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+          <img class="lib-img img-scale" style="max-width: 100%; display: block; border: 1px solid #334254;" src="../../assets/images/share_commands.jpg" alt="Grepolis share commands">
+        </div>
+      </div>
+      <br/>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+          3. <strong>Browsing intel:</strong> The extracted enemy intelligence from the report is linked to your personal GrepoData account.
           This allows you to browse the collected intel using the in-game town intel view or by signing in here.
           <br/>
           <br/>
-          3. <strong>Sharing:</strong> If you are a member of a GrepoData team and if you enable contributions to that team, the report you just indexed will also be shared with your allies as long as they also have access to that team.
+          4. <strong>Sharing intel & commands:</strong> If you are a member of a GrepoData team and if you enable contributions to that team, the reports you index and the commands you upload will be shared with your allies as long as they also have access to that team.
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-          <img class="lib-img" style="max-width: 100%; display: block;" src="../../assets/images/indexer_town_sm.png" alt="Grepolis town intel">
+          <img class="lib-img img-scale" style="max-width: 100%; display: block;" src="../../assets/images/indexer_town_sm.png" alt="Grepolis town intel">
           <h5 class="gd-secondary" style="float: right;">Images copyright © InnoGames GmbH</h5>
         </div>
       </div>
@@ -93,7 +103,7 @@
   </div>
 
   <div class="alert alert-gd-1">
-    <h2 class="gd-primary">What type of reports are collected?</h2>
+    <h2 class="gd-primary">What type of reports can be collected?</h2>
     <div class="faq-content">
       Currently our userscript allows you to collect published reports that are posted on your alliance forum or sent to you in a personal message.
       Reports from your personal reports inbox can also be indexed without publishing them.
@@ -153,12 +163,6 @@
       You can invite the users of the other alliance to join your existing team, or you can simply create a brand new team and invite everybody to that one. Once they join the new team, each individual user will have to option to upload their existing intel to the new team.
       <br/><br/>In order to commit your existing intel, go to the overview for the new team on grepodata.com. If there is any existing intel to commit, you will be prompted with a message to share the intel (as shown below). If you do not see this message, there is no intel to share.
       <br/><img style="max-width: 80vw;" src="../../assets/images/intel_imports.png"><br/><br/>
-    </div>
-  </div>
-  <div class="alert alert-gd-1">
-    <h2 class="gd-primary">Why can I no longer see the intel I collected?</h2>
-    <div class="faq-content">
-      As of April 2021, a GrepoData account is required to collect and browse the intel. Sign up for an account to continue using our city indexer tool.
     </div>
   </div>
 </div>
