--- a/src/app/indexer/landing-page/landing-page.component.scss
+++ b/src/app/indexer/landing-page/landing-page.component.scss
@@ -39,6 +39,12 @@
     font-weight: 100!important;
   }
 }
+.img-thumbnail {
+  margin-bottom: 10px;
+}
+.img-thumbnail:hover {
+  box-shadow: 0px 0px 10px 1px #18bc9b50 !important;
+}
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
